--- a/config.json
+++ b/config.json
@@ -2,15 +2,15 @@
     "app_id" : "com.tercertermino.dsmcampus",
     "appname": "DSM Campus",
     "desktopappname": "DSMcampus Desktop",
-    "versioncode" : "1111",
-    "versionname" : "1.1.1",
+    "versioncode" : "1112",
+    "versionname" : "1.1.2",
     "cache_expiration_time" : 300000,
     "default_lang" : "es",
     "languages": {"en": "English", "es": "Español", "pt-br": "Português - Brasil" },
     "wsservice" : "moodle_mobile_app",
     "wsextservice" : "local_mobile",
     "demo_sites": {},
-    "gcmpn": "694767596569",
+    "gcmpn": "",
     "customurlscheme": "dsmmobile",
     "siteurl": "http://www.dsmcampus.com",
     "skipssoconfirmation": "false",
